hphp/hack/test/typecheck/type_structure/type_structure8.php
<?hh // strict

class C {
  const type T = int;
}

function test(): void {
  type_structure('C', 'T');
}
